alignment isse resolved

--- a/src/index.css
+++ b/src/index.css
@@ -59,9 +59,9 @@ a:hover{
     text-align: center;
    }
 #contact-btn{
-padding:7px 9px;
+padding:1px 3px;
 border-radius:10px;
-font-size: 11px;
+font-size: 10px;
 }
 #download{
   padding:6px 9px;
